--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -15,6 +15,11 @@ security:
             security: false
         main:
             lazy: true
+            form_login:
+                # "app_login" is the name of the route created previously
+                login_path: app_login
+                check_path: app_login
+                enable_csrf: true
             provider: app_user_provider
 
             # activate different ways to authenticate
