--- a/config/services.yaml
+++ b/config/services.yaml
@@ -22,5 +22,7 @@ services:
     App\Service\DoctrineService:
         arguments:
             $managerRegistry: '@doctrine'
+    App\Controller\HomeController:
+        tags: [ 'controller.service_arguments' ]
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
