--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -21,6 +21,9 @@ security:
                 check_path: app_login
                 enable_csrf: true
             provider: app_user_provider
+            logout:
+                path: app_logout
+                target: /login
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
@@ -31,7 +34,7 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
+         - { path: ^/home, roles: ROLE_USER }
         # - { path: ^/profile, roles: ROLE_USER }
 
 when@test:
